kustomization/components/networkpolicy-allow-from-bifrost/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-bifrost-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bifrost
          podSelector:
            matchLabels:
              app.kubernetes.io/name: bifrost
      ports:
        - port: model-api
          protocol: TCP
        - port: web
          protocol: TCP
  podSelector:
    matchLabels:
      hogs.tswn.us/bifrost-route: "true"
  policyTypes:
    - Ingress
